--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 
 	
@@ -15,7 +15,7 @@
 <body>
 	
 	<header>
-		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
+		<img src="town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75<sup>th</sup> Year</h3>
 	</header>
@@ -36,8 +36,8 @@
 		</ul>
 
 		<h1>This season's guest speakers</h1>
-		<h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
-		<img src="images/toobin75.jpg" alt="Jeffrey Toobin photo">
+		<h3>October<br><a href="toobin.html">Jeffrey Toobin</a></h3>
+		<img src="toobin75.jpg" alt="Jeffrey Toobin photo">
 <!--		<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
